Ajout de la classe config

--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ DB_PASSWORD =
 #Application
 APP_ENV = developpement
 APP_DEBUG = true
-APP_KEY = notre clé secrète
+APP_KEY = 0iO+9rml1pcpUGc2LdR3CGyyF8fa4Ot2MbddcS28AzM=
 APP_URL = http://localhost:8080
 
 #Sécurité
-JWT_SECRET = key secrete
+JWT_SECRET = PS3oyNSExY5x9AoQ/JKLDYincl6jd8sdPM780QurW7g=
 CSRF_TOKEN_EXPIRE = 3600
 SESSION_LIFETIME = 7200
 
