--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 #Base de données
 DB_CONNECTION = mysql
-DB_HOST = 127.0.0.1
+DB_HOST = db
 DB_PORT = 3306
-DB_NAME = garage_db
+DB_NAME = garagephp_db
 DB_USER = root
 DB_PASSWORD = 
 
@@ -24,7 +24,8 @@ MAIL_PORT = 587
 MAIL_USERNAME = votre Email
 MAIL_PASSWORD = votre mot de passe
 MAIL_ENCRYPTION = null
-MAIL_FROM_NAME = "${APP_NAME: Mon Garage}"
+MAIL_FROM_NAME = "Garage"
+
 #Logs
 LOG_LEVEL = debug
 LOG_FILE = storage/logs/app.log
